[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trace-mineral-agent"
version = "0.1.0"
description = "Multi-paradigm research agent for trace mineral therapeutics discovery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ChaiWithJai" }]
keywords = ["langchain", "langgraph", "trace-minerals", "multi-paradigm", "research-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "deepagents>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "defusedxml>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
trace-mineral-agent = "trace_mineral_agent.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trace_mineral_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=trace_mineral_agent --cov-report=term-missing"
